feat: deploy configs and documentation improve
