# index.js
@@ -11,7 +11,7 @@ app.use(express.json());
 
 app.get('/health', (_, res) => res.status(200).json({ date: new Date(), message: 'online' }));
 
-app.use('/products', productRoutes);
+app.use('/product', productRoutes);
 
 app.use('/documentation', swaggerUi.serve, swaggerUi.setup(swaggerDocument));
 
@@ -19,9 +19,9 @@ mongoose.connect(process.env.MONGO_URI)
   .then(() => {
     console.log('Conectado ao MongoDB!');
 
-    app.listen(process.env.PORT, () => {
-      console.log(`Server online on port ${process.env.PORT}`);
-    });
+  app.listen(process.env.PORT, '0.0.0.0', () => {
+    console.log(`Server online on port ${process.env.PORT}`);
+  });
 
   }).catch((err) => {
      console.error('Erro ao conectar ao MongoDB:', err);
